--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <div class="navbar-links">
         <p class="navbar-link"><a href=""><i class="fa-solid fa-house"></i></a></p>
-        <p class="navbar-link"><a href="">Mens</a></p>
+        <p class="navbar-link"><a href="mens.html">Mens</a></p>
         <p class="navbar-link"><a href="">Women</a></p>
         <p class="navbar-link"><a href="">Kids</a></p>
         <p class="navbar-link"><a href=""> Sale </a></p>
