Adding new files

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     </div>
     
     <div class="navbar-links">
-        <p class="navbar-link"><a href=""><i class="fa-solid fa-house"></i></a></p>
+        <p class="navbar-link"><a href="index.html"><i class="fa-solid fa-house"></i></a></p>
         <p class="navbar-link"><a href="mens.html">Mens</a></p>
-        <p class="navbar-link"><a href="">Women</a></p>
-        <p class="navbar-link"><a href="">Kids</a></p>
+        <p class="navbar-link"><a href="women.html">Women</a></p>
+        <p class="navbar-link"><a href="kids.html">Kids</a></p>
         <p class="navbar-link"><a href=""> Sale </a></p>
         
     </div>
