--- a/kids.html
+++ b/kids.html
@@ -61,7 +61,7 @@
 
 <!-- mens products -->
 <div class="mens-section">
-    <h1>Mens Collections</h1>
+    <h1>Kids Collections</h1>
     <div class="products" id="products">
         
         <div class="product-mens">
