--- a/women.html
+++ b/women.html
@@ -54,46 +54,46 @@
         <p class="side-navbar-link"><a href="">Order</a></p>
         <p class="side-navbar-link"><a href="">Contact</a></p>
         <p class="side-navbar-link"><a href="">Log in</a></p>
-        <p class="side-navbar-link"><a href="">Sign up</a></p>
+        
     </div>
 
 </div>
 
 <!-- mens products -->
 <div class="mens-section">
-    <h1>Mens Collections</h1>
+    <h1>Womens Collections</h1>
     <div class="products" id="products">
         
         <div class="product-mens">
-            <img src="https://source.unsplash.com/random/200x200/?mens  white shirt" alt="">
+            <img src="https://source.unsplash.com/random/200x200/?women  white shirt" alt="">
             <p>White shirt</p>
         </div class="product-mens">
         <div class="product-mens">
-            <img src="https://source.unsplash.com/random/200x200/?mens  black shirt" alt="">
+            <img src="https://source.unsplash.com/random/200x200/?women  black shirt" alt="">
             <p>black shirt</p>
         </div>
         <div class="product-mens">
-            <img src="https://source.unsplash.com/random/200x200/?mens  purple shirt" alt="">
+            <img src="https://source.unsplash.com/random/200x200/?womens  purple shirt" alt="">
             <p>purple shirt</p>
         </div>
         <div class="product-mens">
-            <img src="https://source.unsplash.com/random/200x200/?mens  red shirt" alt="">
+            <img src="https://source.unsplash.com/random/200x200/?womens  red shirt" alt="">
             <p> red shirt</p>
         </div>
         <div class="product-mens">
-            <img src="https://source.unsplash.com/random/200x200/?mens  blue shirt" alt="">
+            <img src="https://source.unsplash.com/random/200x200/?womens  blue shirt" alt="">
             <p> blue shirt</p>
         </div>
         <div class="product-mens">
-            <img src="https://source.unsplash.com/random/200x200/?mens  blue shirt" alt="">
+            <img src="https://source.unsplash.com/random/200x200/?womens  blue shirt" alt="">
             <p> blue shirt</p>
         </div>
         <div class="product-mens">
-            <img src="https://source.unsplash.com/random/200x200/?mens  blue shirt" alt="">
+            <img src="https://source.unsplash.com/random/200x200/?womens  blue shirt" alt="">
             <p> blue shirt</p>
         </div>
         <div class="product-mens">
-            <img src="https://source.unsplash.com/random/200x200/?mens  blue shirt" alt="">
+            <img src="https://source.unsplash.com/random/200x200/?womens  blue shirt" alt="">
             <p> blue shirt</p>
         </div>
 
