--- a/women.html
+++ b/women.html
@@ -61,12 +61,12 @@
 
 <!-- mens products -->
 <div class="mens-section">
-    <h1>Women Collections</h1>
+    <h1 style="padding:70px"> Women Collections</h1>
     <div class="products" id="products">
         
         <div class="product-mens">
             <img src="https://m.media-amazon.com/images/I/81iiPvmfJvL._AC_UL320_.jpg" alt="" width="200px" height="250px" style="border-radius: 10px;">
-            <h1>FUNDAY </h1>
+            <h4>FUNDAY </h4>
             <P> Women's Denim Length jackect </P>
             <button>ADD TO BAG</button>
         </div class="product-mens">
@@ -109,7 +109,7 @@
         </div>
         <div class="product-mens">
             <img src="https://m.media-amazon.com/images/I/61OZMfJYdKL._AC_UL320_.jpg" alt=""width="200" height="250px">
-            <h1>Womanista</h1>
+            <h4>Womanista</h4>
                 <p>women's printed saree</p>
             <button>ADD TO BAG</button>
             
